--- a/Train_yolov4_imagenet.ipynb
+++ b/Train_yolov4_imagenet.ipynb
@@ -60,7 +60,7 @@
         "from google.colab import files\n",
         "from google.colab.patches import cv2_imshow"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "! pip install -q awscli"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
         "# Check what we get: K80, P100, K4 or T4.\n",
         "! nvidia-smi"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,11 +154,11 @@
         "colab": {}
       },
       "source": [
-        "CLASS_NAMES = ['Human face', 'Human hand']\n",
-        "SAMPLES_LIMIT = 100 #1000 for one class ~ 1.5 hours\n",
-        "IS_TINY = True\n"
+        "CLASS_NAMES = ['Human face', 'Human hand']   # Specify labels from ImageNetv4\n",
+        "SAMPLES_LIMIT = 1000                         # How many image samples of earch class you will use\n",
+        "IS_TINY = True                               # Train YOLOv4 or Tiny YOLOv4 "
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -179,7 +179,6 @@
         "colab": {}
       },
       "source": [
-        "#--- Dataset downloading utils ---\n",
         "def yolo2voc(data, w, h):\n",
         "  '''\n",
         "  Convert boundary box from YOLO format to VOC\n",
@@ -218,7 +217,7 @@
         "  img_sample = cv2.resize(img_sample, (0,0), fx=0.5, fy=0.5)  \n",
         "  cv2_imshow(img_sample)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -240,12 +239,11 @@
       },
       "source": [
         "def setup_OIDv4Toolkit():\n",
-        "  # Clone tookit for Open Image Dataset v4\n",
         "  ! git clone https://github.com/theAIGuysCode/OIDv4_ToolKit\n",
         "  % cd OIDv4_ToolKit\n",
         "  ! pip install -q -r  requirements.txt"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -262,7 +260,7 @@
       "source": [
         "setup_OIDv4Toolkit()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +286,7 @@
       "source": [
         "class_names_query = r' '.join(name.replace(' ', '_') for name in CLASS_NAMES)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -310,7 +308,7 @@
         " --limit {SAMPLES_LIMIT} \\\n",
         " --multiclasses 1"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -385,7 +383,7 @@
         "\n",
         "! python convert_annotations.py"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +411,7 @@
         "dataset_folder_name = r'_'.join(name for name in CLASS_NAMES)\n",
         "dataset_folder_name"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +447,7 @@
         "! rm -r /content/OIDv4_ToolKit/OID/Dataset/train/'{dataset_folder_name}'/Label\n",
         "! ls /content/OIDv4_ToolKit/OID/Dataset/train/'{dataset_folder_name}'/ | wc -l"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,25 +459,14 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "l967HDcydONM",
-        "colab_type": "code",
-        "colab": {}
+        "id": "Jfqn2bXXTdZ2",
+        "colab_type": "text"
       },
       "source": [
-        "# Move dataset folder to the root of working directory\n",
-        "! mkdir /content/dataset\n",
-        "\n",
-        "# I can't use mv command because of \"Argument list too long error\"\n",
-        "# Instead of that I will use while loop.\n",
-        "# Read more here: https://www.cyberciti.biz/faq/argument-list-too-long-error-solution/\n",
-        "\n",
-        "# ! mv /content/OIDv4_ToolKit/OID/Dataset/train/'Human face_Human hand'/* /content/dataset\n",
-        "#! ls -1  /content/OIDv4_ToolKit/OID/Dataset/train/'{dataset_folder_name}'/ | while read file; do mv /content/OIDv4_ToolKit/OID/Dataset/train/'{dataset_folder_name}'/$file /content/dataset ; done"
-      ],
-      "execution_count": 13,
-      "outputs": []
+        "You have to see value roughly close to (4 * SAMPLES_LIMIT)"
+      ]
     },
     {
       "cell_type": "code",
@@ -489,6 +476,9 @@
         "colab": {}
       },
       "source": [
+        "# Move dataset folder to the root of working directory\n",
+        "! mkdir /content/dataset\n",
+        "\n",
         "dest = '/content/dataset'\n",
         "src = os.path.join('/content/OIDv4_ToolKit/OID/Dataset/train', dataset_folder_name)\n",
         "src_files = os.listdir(src)\n",
@@ -496,9 +486,9 @@
         "for file_name in src_files:\n",
         "    full_file_name = os.path.join(src, file_name)\n",
         "    if os.path.isfile(full_file_name):\n",
-        "        shutil.copy(full_file_name, dest)"
+        "        shutil.move(full_file_name, dest)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -516,7 +506,7 @@
         "# Check that we succesfully move all files\n",
         "! ls /content/dataset/ | wc -l"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -542,7 +532,7 @@
         "dir_path = '/content/dataset' \n",
         "show_data_sample(dir_path)"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -589,7 +579,7 @@
       "source": [
         "% cd /content"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +600,7 @@
       "source": [
         "def make_darknet():\n",
         "  '''\n",
-        "  Run this function if darknet wasn`t setted up your root project folder\n",
+        "  Make Darknet GPU version \n",
         "  '''\n",
         "  # Clone and  make darknet in My Drive folder. We should prepare all config files there befory copy them to tmp\n",
         "  ! git clone https://github.com/AlexeyAB/darknet.git\n",
@@ -627,7 +617,7 @@
         "\n",
         "  ! make --silent"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -660,7 +650,7 @@
         "%%capture\n",
         "make_darknet()"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -671,21 +661,16 @@
         "colab": {}
       },
       "source": [
-        "def download_pretrained_data(tiny_only=True):\n",
-        "  # YOLOv4\n",
-        "  # cfg files have already been in cfg folder\n",
-        "  if not tiny_only:\n",
-        "    ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\n",
-        "    ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.conv.137\n",
-        "\n",
-        "  # YOLOv4 tiny\n",
-        "  #! wget --quiet https://raw.githubusercontent.com/AlexeyAB/darknet/master/cfg/yolov4-tiny.cfg\n",
-        "  ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.weights\n",
-        "  ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.conv.29\n",
-        "\n",
-        "  "
+        "def download_pretrained_weights(is_tiny):\n",
+        "    # AlexeAB's cfg files have already been in cfg folder\n",
+        "    if is_tiny:\n",
+        "        ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.weights\n",
+        "        ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v4_pre/yolov4-tiny.conv.29\n",
+        "    else:\n",
+        "        ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\n",
+        "        ! wget --quiet https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.conv.137"
       ],
-      "execution_count": 20,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -696,9 +681,9 @@
         "colab": {}
       },
       "source": [
-        "download_pretrained_data()"
+        "download_pretrained_weights(IS_TINY)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -709,17 +694,17 @@
         "colab": {}
       },
       "source": [
-        "def predict_sample(tiny=True):\n",
+        "def predict_sample(is_tiny):\n",
         "    % cd /content/darknet\n",
         "    ! chmod 777 ./darknet\n",
-        "    if tiny:\n",
+        "    if is_tiny:\n",
         "        ! ./darknet detector test cfg/coco.data cfg/yolov4-tiny.cfg yolov4-tiny.weights data/horses.jpg \n",
         "    else:\n",
         "         ! ./darknet detector test cfg/coco.data cfg/yolov4.cfg yolov4.weights data/horses.jpg \n",
         "    image = cv2.imread('predictions.jpg')\n",
         "    cv2_imshow(image)"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -735,9 +720,9 @@
       },
       "source": [
         "# check that we get working YOLO version\n",
-        "predict_sample()"
+        "predict_sample(IS_TINY)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -849,7 +834,7 @@
         "% cd /content/\n",
         "! wget -c https://raw.githubusercontent.com/Gooogr/YOLO_Toolkit/master/splitTrainAndTest.py"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -882,7 +867,7 @@
         "# Create train and test(validate) txt files. Split ratio will be 0.1\n",
         "! python3 splitTrainAndTest.py /content/dataset"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -900,7 +885,7 @@
         "! mkdir /content/darknet/custom_config_files\n",
         "% cd /content/darknet/custom_config_files"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -935,7 +920,7 @@
         "    for item in CLASS_NAMES:\n",
         "        f.write(\"%s\\n\" % item)"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -952,7 +937,7 @@
       "source": [
         "! cat obj.names"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1001,7 +986,7 @@
         "    with open(line, 'w') as f:\n",
         "        f.write(cell.format(**globals()))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1014,7 +999,7 @@
       "source": [
         "labels_amount = len(CLASS_NAMES)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1032,7 +1017,7 @@
         "backup = /content/yolo_weights\n",
         "train = /content/train.txt"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1049,7 +1034,7 @@
       "source": [
         "! cat yolo.data"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1073,8 +1058,23 @@
       "source": [
         "> yolov4.cfg\n",
         "\n",
-        "**Warning! At this step, you need to make some changes to the configuration files manually!**\n",
+        "**Warning! At this step, you will probably need to make some changes to the configuration files manually!**\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pJaklBXrlbLO",
+        "colab_type": "text"
+      },
+      "source": [
+        "If you have prepaired .cfg file you can skip this step and download it directly through ```! wget``` command. \n",
+        "Don't forget, that default names for .cfg file is:\n",
+        "* for tiny yolo - ```yolov4-tiny-custom.cfg```\n",
+        "* for yolo - ```yolov4-custom.cfg```\n",
+        "\n",
+        "If you havn`t - follow the code:"
       ]
     },
     {
@@ -1091,7 +1091,7 @@
         "    else:\n",
         "        ! wget -c https://raw.githubusercontent.com/Gooogr/YOLO_Toolkit/imagenet/cfg_templates/yolov4-custom.cfg"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1108,7 +1108,7 @@
       "source": [
         "get_cfg_file(IS_TINY)"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1147,14 +1147,34 @@
         "colab": {}
       },
       "source": [
-        "def generate_anchors():\n",
+        "def generate_anchors(is_tiny, width=None, height=None):\n",
+        "    if  is_tiny and (width is None or height is None):\n",
+        "        width = 416\n",
+        "        height = 416\n",
+        "    elif width is None or height is None:\n",
+        "        width = 608\n",
+        "        height = 608\n",
         "    % cd /content/darknet\n",
         "    ! chmod 777 ./darknet\n",
         "    ! ./darknet detector calc_anchors \\\n",
-        "    ./custom_config_files/yolo.data -num_of_clusters 2 -width 416 -height 416 -show\n"
+        "    ./custom_config_files/yolo.data -num_of_clusters {labels_amount} -width {width} -height {height} -show\n"
       ],
-      "execution_count": 35,
+      "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "E6ARgBBUzK6V",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Warning!** <br>\n",
+        "**If you are going to set custom** ```width``` **and** ```height``` **in your cfg file, you should specify them in** ```generate_anchors(IS_TINY)``` **as well.**<br>\n",
+        "By default:\n",
+        "* for YOLO v4: ```width```=608 ```height```=608\n",
+        "* for Tiny-YOLO v4: ```width```=416 ```height```=416"
+      ]
     },
     {
       "cell_type": "code",
@@ -1168,9 +1188,9 @@
         "outputId": "5423a0e3-561d-4db9-8b9d-fee496d26c1c"
       },
       "source": [
-        "generate_anchors()"
+        "generate_anchors(IS_TINY)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1214,7 +1234,8 @@
         "### How to configure cfg file\n",
         "\n",
         "You can find downloaded template of the .cfg file in <br>\n",
-        "```/content/darknet/custom_config_files```\n",
+        "```/content/darknet/custom_config_files```<br>\n",
+        "Double click on it and it will open in Google Colab editor window.\n",
         "\n",
         "Necessary steps:\n",
         " * change line batch to ```batch=64```\n",
@@ -1267,13 +1288,19 @@
         "colab": {}
       },
       "source": [
-        "def train_yolo_from_scratch():\n",
+        "def train_yolo(is_tiny):\n",
         "    # Train YOLO\n",
         "    % cd /content/darknet\n",
-        "    ! ./darknet detector train \\\n",
-        "    ./custom_config_files/yolo.data \\\n",
-        "    ./custom_config_files/yolov4-tiny-custom.cfg \\\n",
-        "    ./yolov4-tiny.conv.29 > /content/temp_train.log -dont_show  "
+        "    if is_tiny:\n",
+        "        ! ./darknet detector train \\\n",
+        "        ./custom_config_files/yolo.data \\\n",
+        "        ./custom_config_files/yolov4-tiny-custom.cfg \\\n",
+        "        ./yolov4-tiny.conv.29 > /content/temp_train.log -dont_show  \n",
+        "    else:\n",
+        "         ! ./darknet detector train \\\n",
+        "        ./custom_config_files/yolo.data \\\n",
+        "        ./custom_config_files/yolov4-custom.cfg \\\n",
+        "        ./yolov4.conv.137 > /content/temp_train.log -dont_show "
       ],
       "execution_count": null,
       "outputs": []
@@ -1286,7 +1313,7 @@
         "colab": {}
       },
       "source": [
-        "train_yolo_from_scratch()"
+        "train_yolo(IS_TINY)"
       ],
       "execution_count": null,
       "outputs": []
